# simplhdl

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: publish.yml
docs/: conf.py  flows.rst  index.rst  intel-ips.md  introduction.rst  plugins.rst  requirements.txt
docs/flows/: ghdl.rst  icarus.rst  quartus.rst  questasim.rst  vcs.rst  vivado.rst  xsim.rst
examples/adder/: adder.core
examples/adder/syn/: timing.xdc
examples/adder/tests/: testbench.sv  testbench.yml
examples/alu/hdl/: alu_regblock.rdl
examples/hdl/adder/: adder.yml
examples/hdl/adder/hdl/: adder.sv
examples/hdl/adder/sim/: testbench.yml
examples/hdl/adder/syn/: build.yml  placement.xdc  top.sv
examples/hdl/alu/: alu.yml
examples/hdl/alu/hdl/: add.sv  add.yml  alu.sv  mul.sv  sub.sv
examples/hdl/alu/sim/pyuvm/: pyuvm.yml  pyuvm_test.py  testbench.py
examples/hdl/alu/sim/pyuvm/alu_vip/: __init__.py  agent.py  aluif.py  driver.py  (+3 more)
examples/hdl/alu/syn/: build.yml  placement.xdc  timing.xdc
examples/hdl/dff/: comp_pkg.vhd  dff.vhd  sim.yml  tb.vhd  test.py
examples/hdl/hello/: hello.yml
examples/hdl/hello/syn/: build.yml
examples/hdl/substractor/hdl/: substractor.vhd
examples/plugins/simple_parser/: setup.py
examples/plugins/simple_parser/src/simple_parser/: __init__.py  simple_parser.py
simpl/: __main__.py  __version__.py  file.py  settings.py
src/simplhdl/: __init__.py  __main__.py  _compat.py  cocotb.py  component.py  design.py  environment.py  fileset.py  flow.py  generator.py  info.py  parser.py  plugins.py  project.py  repo.py  run.py  settings.py  simplhdl.py  tools.py  utils.py
src/simplhdl/cli/: arguments.py  info.py  run.py
src/simplhdl/flows/: implementationflow.py  modelsimflow.py  quartusflow.py  questaedalizeflow.py  questaflow.py  simulationflow.py  vcsflow.py  vivadoflow.py  xsimflow.py
src/simplhdl/flows/encrypt/: encryptflow.py
src/simplhdl/flows/flake8/: flake8flow.py
src/simplhdl/flows/modelsim/: modelsimflow.py
src/simplhdl/flows/quartusdse/: quartusdseflow.py
src/simplhdl/flows/quartusexport/: quartusexportflow.py
src/simplhdl/flows/questa/: questaflow.py
src/simplhdl/flows/questasim/: questasimflow.py
src/simplhdl/flows/rivierapro/: rivieraproflow.py
src/simplhdl/flows/vcs/: vcsflow.py
src/simplhdl/flows/verible/: veribleflow.py
src/simplhdl/flows/vsg/: vsgflow.py
src/simplhdl/flows/xsim/: xsimflow.py
src/simplhdl/generators/: chisel.py  ipxact.py  jinja2.py  spd.py  systemrdl.py
src/simplhdl/parsers/: fusesocparser.py  importlistparser.py  simplelistparser.py  simplhdlparser.py
src/simplhdl/plugin/: __init__.py  flow.py  generator.py  implementationflow.py  loader.py  parser.py  simulationflow.py
src/simplhdl/project/: attributes.py  base.py  decorator.py  design.py  files.py  fileset.py  project.py
src/simplhdl/pyedaa/: __init__.py  attributes.py  design.py  fileset.py  filetypes.py  project.py  repo.py  target.py  vhdllibrary.py
src/simplhdl/resources/templates/modelsim/: cocotb.mk.j2  files.j2  fileset.j2  modelsim.tcl.j2  project.mk.j2  run.do.j2
src/simplhdl/resources/templates/quartus/: project.tcl.j2  run.tcl.j2
src/simplhdl/resources/templates/questa/: Makefile.j2  cocotb.mk.j2  fileset.j2  project.mk.j2
src/simplhdl/resources/templates/questasim/: Makefile.j2  cocotb.mk.j2  gui.do.j2  project.qrun.j2  run.do.j2
src/simplhdl/resources/templates/rivierapro/: Makefile.j2  cocotb.mk.j2  dependencies.mk.j2  project.mk.j2
src/simplhdl/resources/templates/vcs/: Makefile.j2  cocotb.mk.j2  fileset.j2  project.mk.j2  synopsys_sim.setup.j2  vcs.parameters.j2
src/simplhdl/resources/templates/vivado/: project.tcl.j2  run.tcl.j2
src/simplhdl/resources/templates/vsg/: files.json.j2
src/simplhdl/resources/templates/xsim/: Makefile.j2  fileset.j2
src/simplhdl_chisel/: chisel.py
src/simplhdl_encrypt/encrypt/: encryptflow.py
src/simplhdl_fusesocparser/: fusesocparser.py
src/simplhdl_ghdl/: ghdlflow.py
src/simplhdl_ghdl/resources/templates/ghdl/: Makefile.j2  cocotb.mk.j2  sources.mk.j2
src/simplhdl_icarus/: icarusflow.py
src/simplhdl_icarus/icarus/: icarusflow.py
src/simplhdl_icarus/resources/templates/icarus/: Makefile.j2  cmds.f.j2  cocotb.mk.j2  simplhdl_iverilog_dump.v.j2  sources.mk.j2
src/simplhdl_lint/flake8/: flake8flow.py
src/simplhdl_lint/lint/: lintflow.py
src/simplhdl_lint/resources/templates/flake8/: setup.cfg.j2
src/simplhdl_lint/resources/templates/verible/: rules.cfg.j2
src/simplhdl_lint/resources/templates/vsg/: files.json.j2  rules.yml.j2
src/simplhdl_lint/verible/: veribleflow.py
src/simplhdl_lint/vsg/: vsgflow.py
src/simplhdl_modelsim/modelsim/: modelsimflow.py
src/simplhdl_modelsim/resources/templates/modelsim/: Makefile.j2  cocotb.mk.j2  project.mk.j2
src/simplhdl_parser/: simplhdlparser.py
src/simplhdl_peakrdl/: systemrdl.py
src/simplhdl_quartus/: quartusflow.py  spd.py
src/simplhdl_quartus/quartusdse/: quartusdseflow.py
src/simplhdl_quartus/quartusexport/: quartusexportflow.py
src/simplhdl_quartus/resources/templates/quartus/: project.tcl.j2  run.tcl.j2
src/simplhdl_questasim/questasim/: questasimflow.py
src/simplhdl_questasim/resources/templates/questasim/: modelsim.tcl.j2  project.qrun.j2  visualizer.tcl.j2
src/simplhdl_rivierapro/resources/templates/rivierapro/: Makefile.j2  cocotb.mk.j2  project.mk.j2
src/simplhdl_rivierapro/rivierapro/: rivieraproflow.py
src/simplhdl_vcs/resources/templates/vcs/: Makefile.j2  cocotb.mk.j2  simv-run.do.j2  synopsys_sim.setup.j2  vcs.parameters.j2
src/simplhdl_vcs/vcs/: vcsflow.py
src/simplhdl_vivado/: ipxact.py  vivadoflow.py
src/simplhdl_vivado/resources/templates/vivado/: launch_run.sh.j2  project.tcl.j2  run.tcl.j2  steps.tcl.j2
src/simplhdl_vivado/resources/templates/xsim/: Makefile.j2  cocotb.mk.j2  files.j2  fileset.j2  project.mk.j2
src/simplhdl_vivado/vivadoexport/: vivadoexportflow.py
src/simplhdl_vivado/xsim/: xsimflow.py
tests/: conftest.py  test_design.py  test_files.py  test_fileset.py  test_project.py
(+24 files in other folders)
